# giti

./: .envrc  .gitignore  .nvimrc  README.md  meson.build  shell.nix  uncrustify.cfg
data/: com.github.linarcx.giti.desktop.in.in  gschema.xml  meson.build
data/assets/distro/void/: template
meson/: post_install.py
src/: Application.vala  Main.vala  meson.build
src/Util/: AsyncStatus.vala  Util.vala
src/Widgets/: GridStaged.vala  GridUntracked.vala  HeaderBar.vala  Welcome.vala  WelcomeHeaderBar.vala  WelcomePage.vala  Window.vala
vapi/: libgit2-glib-1.0.vapi
