executable(
    meson.project_name(),

    'Main.vala',
    'Application.vala',

    'Widgets/Window.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/GridUntracked.vala',
    'Widgets/GridStaged.vala',

    dependencies: [
        dependency('gtk+-3.0'),
        dependency('libgit2-glib-1.0'),
        dependency('gee-0.8')
    ],

    install: true
)
